# nixos-setup

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: pre-commit.yml
dev/: flake.nix
docs/: VSCODE-SETTINGS.md
dotfiles/: README.md
dotfiles/home/: bashrc
home/features/vscode/: README.md  activation-vscode-settings.sh.tpl  default.nix  user-settings.nix
home/modules/: browsers.nix  core.nix  default.nix  devtools.nix  gh.nix  git.nix  shell-bash.nix  telegram.nix  vscode-user-settings.nix  vscode.nix
hosts/default/: configuration.nix  hardware-configuration.nix  home.nix
hosts/nixos/: configuration.nix  hardware-configuration.nix  home.nix
scripts/: code  devshell  import-dotfiles  rebuild  setup-links  setup-links.sh  sync-vscode-settings
scripts_py/: __init__.py  code.py  devshell.py  import_dotfiles.py  rebuild.py  setup_links.py  sync_vscode_settings.py  utils.py
tests/: test_code.py  test_devshell.py  test_import_dotfiles.py  test_rebuild.py  test_setup_links.py  test_sync_vscode_settings.py  test_utils.py
