[project]
name = "nixos-setup-scripts"
version = "0.1.0"
description = "Python reimplementations of nixos-setup maintenance scripts"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
